@@ -2,12 +2,14 @@ package amd.tsino.launcher;
 
 import java.net.URL;
 import java.nio.charset.Charset;
+import java.util.HashMap;
+import java.util.Map;
 
 public class LauncherConstants {
     // versions
-    public static final String LAUNCHER_VERSION = "1.0.1 (amd 2014)";
+    public static final String LAUNCHER_VERSION = "1.1.1 (Torden 2014) (amd 2014)";
     public static final String LAUNCHER_TITLE = "TSiNO Minecraft Launcher " + LAUNCHER_VERSION;
-    public static final int VERSION_NUMERIC = 17;
+    public static final int VERSION_NUMERIC = 18;
     // download config
     public static final int DOWNLOAD_THREADS = 13;
     public static final int DOWNLOAD_RETRIES = 3;
@@ -15,10 +17,16 @@ public class LauncherConstants {
     // jvm args
     public static final String JVM_ARGS_32BIT = "-Xmx1G";
     public static final String JVM_ARGS_64BIT = "-Xmx2G";
+    public static final Map<String,String> JVM_ARGS_VERSION; 
+    static {
+      JVM_ARGS_VERSION= new HashMap<String,String>();
+      JVM_ARGS_VERSION.put("1.7","-XX:MaxPermSize=128M");
+    }    
     // files
     public static final String AUTH_JSON = "launcher_profiles.json";
     public static final String STYLE_ZIP = "style.zip";
     public static final String CONFIG_ZIP = "config.zip";
+    public static final String RESOURCES_ZIP = "assets.zip"; 
     public static final String RCPACK_ZIP = "rcpack.zip";
     public static final String RESOURCES_BASE = "assets/";
     public static final String RESOURCES_XML = RESOURCES_BASE + "assets.xml";
@@ -34,7 +42,8 @@ public class LauncherConstants {
     public static final String BASE_URL = "http://tsino.unet.by/minecraft/klient/";
     //"https://s3.amazonaws.com/Minecraft.Resources/";
     public static final URL STYLE_URL = LauncherUtils.getURL(BASE_URL + STYLE_ZIP);
-    public static final URL CONFIG_URL = LauncherUtils.getURL(BASE_URL + "config/" + CONFIG_ZIP);
+    public static final URL CONFIG_URL = LauncherUtils.getURL(BASE_URL + CONFIG_BASE + CONFIG_ZIP);
+    public static final URL RESOURCES_URL = LauncherUtils.getURL(BASE_URL + RESOURCES_BASE + RESOURCES_ZIP);
     public static final URL RCPACK_URL = LauncherUtils.getURL(BASE_URL + RCPACK_ZIP);
     public static final URL AUTH_URL = LauncherUtils.getURL("http://tsino.unet.by/minecraft/auth.php");
     public static final URL REGISTER_URL = LauncherUtils.getURL("http://tsino.unet.by/forum/register.php");
